--- a/modules/blox-bootstrap/layouts/partials/cookie_consent.html
+++ b/modules/blox-bootstrap/layouts/partials/cookie_consent.html
@@ -3,8 +3,10 @@
   {{ $js := site.Data.assets.js }}
   {{ $css := site.Data.assets.css }}
   {{ if ($scr.Get "use_cdn") }}
-    {{ printf "<script src=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\"></script>" (printf $js.cookieconsent.url $js.cookieconsent.version) $js.cookieconsent.sri | safeHTML }}
-    {{ printf "<link rel=\"stylesheet\" href=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\">" (printf $css.cookieconsent.url $css.cookieconsent.version) $css.cookieconsent.sri | safeHTML }}
+    {{ partial "functions/get_remote_js" (dict "url" (printf $js.cookieconsent.url $js.cookieconsent.version) "name" "cookieconsent" "version" $js.cookieconsent.version "sri" $js.cookieconsent.sri) }}  
+    {{ partial "functions/get_remote_css" (dict "url" (printf $css.cookieconsent.url $css.cookieconsent.version) "name" "cookieconsent" "version" $css.cookieconsent.version) }}
+    {{/*  {{ printf "<script src=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\"></script>" (printf $js.cookieconsent.url $js.cookieconsent.version) $js.cookieconsent.sri | safeHTML }}  */}}
+    {{/*  {{ printf "<link rel=\"stylesheet\" href=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\">" (printf $css.cookieconsent.url $css.cookieconsent.version) $css.cookieconsent.sri | safeHTML }}  */}}
   {{ end }}
   <script>
   window.addEventListener("load", function(){
