add multilang locales

--- a/modules/blox-bootstrap/layouts/partials/functions/get_address.html
+++ b/modules/blox-bootstrap/layouts/partials/functions/get_address.html
@@ -5,7 +5,8 @@
 
 {{ $page := . }}
 {{ $address := .address }}
-{{ $format_name := $page.Params.address_format | default site.Params.locale.address_format | default "en-us" }}
+{{$locale := partial "functions/get_locale.html" . }}
+{{ $format_name := $page.Params.address_format | default $locale.address_format | default "en-us" }}
 
 {{ if not (isset site.Data.address_formats $format_name) }}{{ errorf "Address format `%s` missing from `data/address_formats.toml`!" $format_name }}{{end}}
 
