--- a/modules/blox-bootstrap/layouts/partials/book_layout.html
+++ b/modules/blox-bootstrap/layouts/partials/book_layout.html
@@ -80,7 +80,8 @@
       </div>
 
       <div class="body-footer">
-        <p>{{ i18n "last_updated" }} {{ $.Lastmod | time.Format site.Params.locale.date_format }}</p>
+        {{$locale := partial "functions/get_locale.html" . }}
+        <p>{{ i18n "last_updated" }} {{ $.Lastmod | time.Format $locale.date_format }}</p>
 
         {{ partial "page_edit" . }}
 
