--- a/modules/blox-bootstrap/layouts/partials/page_metadata.html
+++ b/modules/blox-bootstrap/layouts/partials/page_metadata.html
@@ -15,7 +15,8 @@
 
   {{ if not (in (slice "event" "page") $page.Type) | and (ne $page.Params.show_date false) }}
   <span class="article-date">
-    {{ $date := $page.Lastmod | time.Format site.Params.locale.date_format }}
+    {{$locale := partial "functions/get_locale.html" . }}
+    {{ $date := $page.Lastmod | time.Format $locale.date_format }}
     {{ if eq $page.Type "publication" }}
       {{ $date = $page.Date | time.Format (site.Params.publications.date_format | default "January, 2006") }}
     {{ else }}
