--- a/modules/blox-tailwind/layouts/_default/single.html
+++ b/modules/blox-tailwind/layouts/_default/single.html
@@ -28,7 +28,8 @@
       <div class="mt-4 mb-16">
       <div class="text-gray-500 dark:text-gray-300 text-sm flex items-center flex-wrap gap-y-2">
         {{- if .Date | and (not .Params.hide_date) -}}
-        <span class="mr-1">{{- .Date | time.Format (site.Params.locale.date_format | default ":date_long") -}}</span>
+        {{ $locale := partial "functions/get_locale.html" . }}
+        <span class="mr-1">{{- .Date | time.Format ($locale.date_format | default ":date_long") -}}</span>
         {{- if .Params.authors }}<span class="mx-1">·</span>{{ end -}}
         {{- end -}}
 
