--- a/modules/blox-tailwind/layouts/partials/components/next-in-series.html
+++ b/modules/blox-tailwind/layouts/partials/components/next-in-series.html
@@ -1,3 +1,4 @@
+{{ $locale := partial "functions/get_locale.html" . }}
 {{ if .Params.pager | default true }}
   {{ if or .NextInSection .PrevInSection }}
     {{ $next := .NextInSection }}
@@ -21,7 +22,7 @@
             >{{ $prev.Title }}</span>
             <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
               {{ if .Params.show_date | default true }}
-                {{ time.Format (site.Params.locale.date_format | default ":date_long") $prev.Date }}
+                {{ time.Format ($locale.date_format | default ":date_long") $prev.Date }}
               {{ end }}
             </span>
           </span>
@@ -38,7 +39,7 @@
             >
             <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
               {{ if .Params.show_date | default true }}
-                {{ time.Format (site.Params.locale.date_format | default ":date_long") $next.Date }}
+                {{ time.Format ($locale.date_format | default ":date_long") $next.Date }}
               {{ end }}
             </span>
           </span>
