--- a/modules/blox-tailwind/layouts/partials/views/article-grid.html
+++ b/modules/blox-tailwind/layouts/partials/views/article-grid.html
@@ -1,6 +1,6 @@
 {{ $item := .item }}
 {{ $fill_image := .config.fill_image | default true }}
-
+{{ $locale := partial "functions/get_locale.html" . }}
 {{ $resource := partial "functions/get_featured_image.html" $item }}
 {{ $anchor := $item.Params.image.focal_point | default "Center" }}
 
@@ -86,7 +86,7 @@
           <span class="text-xs text-gray-300 dark:text-gray-600">•</span>
           {{end}}
           <time class="truncate text-sm" datetime="{{ time.Format "2006-01-02" $item.Date }}">
-          {{- $item.Date | time.Format (site.Params.locale.date_format | default ":date_long") -}}
+          {{- $item.Date | time.Format ($locale.date_format | default ":date_long") -}}
           </time>
         </div>
       </div>
