--- a/modules/blox-tailwind/layouts/partials/views/card.html
+++ b/modules/blox-tailwind/layouts/partials/views/card.html
@@ -1,5 +1,5 @@
 {{ $item := .item }}
-
+{{ $locale := partial "functions/get_locale.html" . }}
 {{ $link := $item.RelPermalink }}
 {{ $target := "" }}
 {{ if $item.Params.external_link }}
@@ -25,7 +25,7 @@
         {{ ($item.Params.summary | default $item.Summary) | plainify | htmlUnescape | chomp -}}
       </p>
       <p class="mt-2 text-gray-500 dark:text-gray-400 text-sm">
-        {{- $item.Date | time.Format (site.Params.locale.date_format | default ":date_long") -}}
+        {{- $item.Date | time.Format ($locale.date_format | default ":date_long") -}}
       </p>
     </div>
   </div>
