--- a/modules/blox-bootstrap/layouts/partials/site_js.html
+++ b/modules/blox-bootstrap/layouts/partials/site_js.html
@@ -44,8 +44,8 @@
     {{/*  {{ printf "<script src=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\"></script>" (printf $js.gmaps.url $js.gmaps.version) $js.gmaps.sri | safeHTML }}  */}}
   {{ end }}
 {{ else if (in (slice "mapnik" "mapbox") $map_provider) | and ($scr.Get "use_cdn") }}
-  {{ partial "functions/get_remote_js" (dict "url" (printf $js.leaflet.url $js.leaflet.version) "name" "leaflet" "version" $js.leaflet.version "sri" $js.leaflet.sri) }}  
-  {{/*  {{ printf "<script src=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\"></script>" (printf $js.leaflet.url $js.leaflet.version) $js.leaflet.sri | safeHTML }}  */}}
+  {{/*  {{ partial "functions/get_remote_js" (dict "url" (printf $js.leaflet.url $js.leaflet.version) "name" "leaflet" "version" $js.leaflet.version "sri" $js.leaflet.sri) }}    */}}
+  {{ printf "<script src=\"%s\" integrity=\"%s\" crossorigin=\"anonymous\"></script>" (printf $js.leaflet.url $js.leaflet.version) $js.leaflet.sri | safeHTML }}
 {{ end }}
 
 {{/* Load hash anchors for documentation pages. */}}
