--- a/modules/blox-krrbootstrap/layouts/partials/functions/get_remote_css.html
+++ b/modules/blox-krrbootstrap/layouts/partials/functions/get_remote_css.html
@@ -1,5 +1,6 @@
-
+{{/*  
 {{ with resources.GetRemote .url }}
 {{ $resource := .Content | resources.FromString (printf "css/%s@%s.css" $.name $.version) }}
 <link rel="stylesheet" href="{{ $resource.RelPermalink }}"  crossorigin="anonymous" media="print" onload="this.media='all'">
-{{ end }}
+{{ end }}  */}}
+<link rel="stylesheet" href="{{.url}}"  crossorigin="anonymous" media="print" onload="this.media='all'">
