modfy book type style: add

--- a/modules/blox-krrbootstrap/layouts/book/list.html
+++ b/modules/blox-krrbootstrap/layouts/book/list.html
@@ -1,3 +1,7 @@
 {{- define "main" -}}
-{{ partial "book_layout.html" . }}
+{{ if and .Parent .Parent.IsHome }}
+    {{ partial "book_list.html" . }}
+{{ else }}
+    {{ partial "book_layout.html" . }}
+{{ end }}
 {{- end -}}
