--- a/modules/blox-krrbootstrap/assets/scss/wowchemy/layouts/_book.scss
+++ b/modules/blox-krrbootstrap/assets/scss/wowchemy/layouts/_book.scss
@@ -117,7 +117,7 @@
 .docs-sidebar .nav > li > a {
   display: block;
   padding: 0.25rem 1.5rem;
-  font-size: 0.8rem;
+  // font-size: 0.8rem;
   color: rgba(0, 0, 0, 0.65);
 }
 
@@ -173,7 +173,7 @@
   order: 2;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-  font-size: 0.875rem;
+  // font-size: 0.875rem;
 }
 
 @supports ((position: -webkit-sticky) or (position: sticky)) {
@@ -191,7 +191,7 @@
 .docs-toc-link {
   display: block;
   padding: 0.25rem 1.5rem;
-  font-weight: bold;
+  // font-weight: bold;
   color: rgba(0, 0, 0, 0.65);
 }
 
@@ -224,8 +224,8 @@
 
 .docs-toc-title {
   color: #b5b5b5;
-  font-size: 0.875rem;
-  font-weight: 600;
+  // font-size: 0.875rem;
+  // font-weight: 600;
   padding-left: calc(1.5rem + 1px);
 }
 
@@ -286,4 +286,22 @@ ul.toc-top {
 .anchorjs-link:hover {
   color: $sta-primary;
   text-decoration: none;
+}
+.level1{
+  font-size: 18px;
+  font-weight: 600;
+}
+.level2{
+  font-size: 16px;
+  font-weight: 500;
+}
+.level3{
+  font-weight: 400;
+  font-size: 16px;
+    margin-left: 0.75rem;  
+}
+.level4{
+  font-weight: 400;
+  font-size: 16px;
+    margin-left: 1.25rem;  
 }
