--- a/modules/blox-krrbootstrap/layouts/partials/book_list.html
+++ b/modules/blox-krrbootstrap/layouts/partials/book_list.html
@@ -1,38 +1,14 @@
 {{ $current_page := . }}
 
 {{/* Check whether to show breadcrumb navigation. */}}
-{{ $show_breadcrumb := .Params.show_breadcrumb }}
-
 
 <div class="container-fluid docs">
   <div class="row flex-xl-nowrap">
-    <div class="col-12 col-md-3 col-xl-2 docs-sidebar">
-      {{ partial "book_sidebar" . }}
+    <div class="col-12 col-md-3 col-xl-2">
     </div>
 
-    {{/* Show ToC by default. */}}
-    {{ if ne .Params.toc false }}
-    <div class="d-none d-xl-block col-xl-2 docs-toc">
-      {{ partial "blox-core/functions/get_hook" (dict "hook" "toc-start" "context" .) }}
-
-      <ul class="nav toc-top">
-        <li><a href="#" id="back_to_top" class="docs-toc-title">{{ i18n "on_this_page" }}</a></li>
-      </ul>
-
-      {{ .TableOfContents }}
-
-      {{ partial "blox-core/functions/get_hook" (dict "hook" "toc-end" "context" .) }}
-    </div>
-    {{ end }}
 
     <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 docs-content" role="main">
-
-      <div class="docs-article-container">
-        {{ if $show_breadcrumb }}
-          {{ partial "components/breadcrumb" $current_page }}
-        {{ end }}
-      </div>
-
       {{/* Cover image */}}
       {{ $cover_image := partial "blox-core/functions/get_featured_image.html" . }}
       {{ if $cover_image }}
@@ -51,9 +27,7 @@
         <h1>{{ cond (ne .File nil) (.Title | default (title .File.ContentBaseName)) .Title }}</h1>
 
         <article class="article-style">
-
-          {{/* Only auto-list page children if _index has no content (or if it isn't a .File?) */}}
-          {{ if and (not .Content) (gt (len $.Page.Pages) 0) }}
+          {{ .Content }}
           <ul class="list-unstyled">
             {{ range $.Page.Pages }}
             <li>
@@ -62,22 +36,8 @@
             </li>
             {{end}}
           </ul>
-          {{end}}
-
-          {{ .Content }}
 
         </article>
-
-        {{ partial "components/feedback" . }}
-
-        {{ partial "tags.html" . }}
-
-        {{/* Show next/previous pages by default. */}}
-        {{ if ne .Params.pager false }}
-        <div class="article-widget">
-          {{ partial "components/pager" . }}
-        </div>
-        {{ end }}
       </div>
 
       <div class="body-footer">
@@ -91,7 +51,7 @@
         {{ partial "page_related" . }}
       </div>
 
-      {{ partial "site_footer" . }}
+
 
     </main>
   </div>
