--- a/modules/blox-krrbootstrap/layouts/partials/book_menu.html
+++ b/modules/blox-krrbootstrap/layouts/partials/book_menu.html
@@ -4,7 +4,24 @@
 {{- $current_node := .current_node -}}
 {{- $is_root := .is_root -}}
 {{- $order_by := .order_by -}}
+{{- $level := .level | default 1 -}}
+{{- $section_map := .sections | default  (dict "section" (.section | default 0)  "subsection" (.subsection | default 0) "subsubsection" (.subsubsection | default 0)) -}}
+{{- $section_key := slice "section"   "subsection"  "subsubsection" -}}
+{{- $current_number:= 0 -}}
+{{- $current_key:="" -}}
+{{- $index_prefix := "" -}}
 {{ $icon := "" }}
+
+{{ if  lt $level  4}}
+
+{{- range $key := $section_key -}}
+  {{ $value:= index $section_map $key}}
+  {{ if eq $value 0 }}
+    {{- $current_key =$key -}}
+    {{ break }}
+  {{ end }}
+  {{- $index_prefix = printf "%s%d." $index_prefix $value  -}}
+{{- end -}}
 
 {{ with .sect }}
   {{ if .IsSection }}
@@ -32,13 +49,14 @@
         {{ $icon = printf "<i class=\"%s %s-%s pr-1\"></i>" $pack $pack_prefix . }}
       {{- end -}}
     {{ end }}
+    {{ $prefix:= $index_prefix }}
 
     {{ if $first }}
       <ul class="nav docs-sidenav">
-        <li class="{{ if and .File $current_node.File | and (eq .File.UniqueID $current_node.File.UniqueID) }}active{{ end }}"><a href="{{ .RelPermalink }}">{{ safeHTML $icon }}{{ .LinkTitle }}</a></li>
+        <li class="level{{$level}} {{ if and .File $current_node.File | and (eq .File.UniqueID $current_node.File.UniqueID) }}active{{ end }}"><a href="{{ .RelPermalink }}">{{ $prefix  }} {{ safeHTML $icon }}{{ .LinkTitle }}</a></li>
     {{else}}
       <div class="docs-toc-item">
-        <a class="docs-toc-link {{ if and .File $current_node.File | and (eq .File.UniqueID $current_node.File.UniqueID) }} active{{ end }}" href="{{ .RelPermalink }}">{{ safeHTML $icon }}{{ .LinkTitle }}</a>
+        <a class="level{{$level}} docs-toc-link {{ if and .File $current_node.File | and (eq .File.UniqueID $current_node.File.UniqueID) }} active{{ end }}" href="{{ .RelPermalink }}">{{$prefix }} {{ safeHTML $icon }}{{ .LinkTitle }}</a>
     {{end}}
 
     {{- $page_count := (add (len .Pages) (len .Sections)) -}}
@@ -52,18 +70,17 @@
       {{- end -}}
       {{- $pages := (.Scratch.Get "pages") -}}
       {{- if eq $order_by "title" -}}
-        {{- range $pages.ByTitle -}}
-          {{ template "book-menu" dict "sect" . "current_node" $current_node "order_by" $order_by }}
-        {{- end -}}
+        {{- $pages = $pages.ByTitle -}}
       {{- else if eq $order_by "title_desc" -}}
-        {{- range $pages.ByTitle.Reverse -}}
-          {{ template "book-menu" dict "sect" . "current_node" $current_node "order_by" $order_by }}
-        {{- end -}}
+        {{- $pages =  $pages.ByTitle.Reverse -}}
       {{- else -}}
-        {{- range $pages.ByWeight -}}
-          {{ template "book-menu" dict "sect" . "current_node" $current_node "order_by" $order_by }}
-        {{- end -}}
+        {{- $pages =  $pages.ByWeight -}}
       {{- end}}
+      {{ range $pages }}
+        {{ $current_number = add $current_number 1  }}
+        {{ $section_map = merge $section_map (dict $current_key $current_number)}}
+        {{ template "book-menu" dict "sect" . "current_node" $current_node "order_by" $order_by "level" (add $level 1) "sections" $section_map }}
+      {{ end }}
       {{ if not $first }}
         </ul>
       {{end}}
@@ -77,10 +94,12 @@
 
   {{- else -}}
     {{- if not .Params.Hidden -}}
-      <li class="{{ if and .File $current_node.File | and (eq .File.UniqueID $current_node.File.UniqueID) }}active{{ end }}"><a href="{{ .RelPermalink }}">{{ safeHTML $icon }}{{ .LinkTitle | default (title .File.ContentBaseName) }}</a></li>
+      {{ $current_number = add $current_number 1  }}
+      {{/*  {{ $section_map = merge $section_map (dict $current_key $current_number)}}  */}}
+      <li class="{{ if and .File $current_node.File | and (eq .File.UniqueID $current_node.File.UniqueID) }}active{{ end }}"><a class="level{{$level}}" href="{{ .RelPermalink }}">{{$index_prefix}} {{ safeHTML $icon }}{{ .LinkTitle | default (title .File.ContentBaseName) }}</a></li>
     {{- end -}}
   {{ end -}}
 {{- end -}}
-
+{{ end }}
 {{/* End define. */}}
 {{ end -}}
