--- a/modules/blox-krrbootstrap/layouts/partials/functions/get_remote_css.html
+++ b/modules/blox-krrbootstrap/layouts/partials/functions/get_remote_css.html
@@ -3,4 +3,9 @@
 {{ $resource := .Content | resources.FromString (printf "css/%s@%s.css" $.name $.version) }}
 <link rel="stylesheet" href="{{ $resource.RelPermalink }}"  crossorigin="anonymous" media="print" onload="this.media='all'">
 {{ end }}  */}}
-<link rel="stylesheet" href="{{.url}}"  crossorigin="anonymous" media="print" onload="this.media='all'">
+
+{{ if fileExists (printf "static/css/%s@%s.css" .name  .version ) }}
+    <link rel="stylesheet" href="{{ printf "/css/%s@%s.css" .name  .version  | relURL  }}"  crossorigin="anonymous" media="print" onload="this.media='all'">
+{{ else }}
+    <link rel="stylesheet" href="{{.url}}"  crossorigin="anonymous" media="print" onload="this.media='all'">
+{{- end -}}
