update api to Hugo 0.140.0 use resources.Get or resources.GetRemote with transform.Unmarshal.

--- a/modules/blox-krrbootstrap/layouts/shortcodes/github_repo.html
+++ b/modules/blox-krrbootstrap/layouts/shortcodes/github_repo.html
@@ -8,41 +8,42 @@
   <p>Please provide a GitHub repository in the format owner/repo.</p>
 {{ else }}
   {{ $url := printf "https://api.github.com/repos/%s/%s" $owner $name }}
-  {{ $data := getJSON $url }}
-
-  <div class="github-repo">
-    <div class="repo-header">
-        <div class="repo-title">
-            <i class="fab fa-github"></i>
-              <a href="https://github.com/{{ $repo }}" target="_blank" class="repo-link">{{ $repo }}</a>
-        </div>
-      {{ if $data }}
-      <div class="repo-stats">
-        <div class="stat-item">
-          <i class="fas fa-star"></i> {{ $data.stargazers_count }}
-        </div>
-        <div class="stat-item">
-          <i class="fas fa-code-branch"></i> {{ $data.forks_count }}
-        </div>
-        <div class="stat-item">
-          <i class="fas fa-laptop-code"></i> {{ $data.language }}
-        </div>
-        <div class="stat-item">
-          <i class="fas fa-clock"></i> {{ $data.updated_at |  time.Format "2006-01-02 15:04" }}
+  {{ with  resources.GetRemote $url }}
+    {{ with .Err }}
+      <p>Could not retrieve repository data. {{ errorf "%s" . }} </p>
+    {{ else }}
+    {{ $data := . | transform.Unmarshal }}
+    <div class="github-repo">
+      <div class="repo-header">
+          <div class="repo-title">
+              <i class="fab fa-github"></i>
+                <a href="https://github.com/{{ $repo }}" target="_blank" class="repo-link">{{ $repo }}</a>
+          </div>
+        <div class="repo-stats">
+          <div class="stat-item">
+            <i class="fas fa-star"></i> {{ $data.stargazers_count }}
+          </div>
+          <div class="stat-item">
+            <i class="fas fa-code-branch"></i> {{ $data.forks_count }}
+          </div>
+          <div class="stat-item">
+            <i class="fas fa-laptop-code"></i> {{ $data.language }}
+          </div>
+          <div class="stat-item">
+            <i class="fas fa-clock"></i> {{ $data.updated_at |  time.Format "2006-01-02 15:04" }}
+          </div>
         </div>
       </div>
-    {{ else }}
-      <p>Could not retrieve repository data.</p>
-    {{ end }}
-    </div>
 
-    <div class="repo-description">
-      {{ with .Get 1 }}
-        <p>{{ . }}</p>
-      {{ else }}
-        <p>No description available for this repository.</p>
-      {{ end }}
+      <div class="repo-description">
+        {{ with $.Get 1 }}
+          <p>{{ . }}</p>
+        {{ else }}
+          <p>No description available for this repository.</p>
+        {{ end }}
+      </div>
     </div>
-  </div>
+    {{ end }}
+  {{ end }}
 {{ end }}
 
